src/objects/MRRSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Few__c</fullName>
        <label>Monthly Few</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Software_Plan__c</fullName>
        <label>Software Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Prospective Implementation MRR Snapshot</label>
    <nameField>
        <label>Prospective Implementation MRR Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospective Implementation MRR Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>